<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Frontend.LogInActivity"
    tools:showIn="@layout/activity_log_in">

    <Button
        android:id="@+id/log_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Log In"
        android:onClick="onLogInBtn"
        android:layout_centerInParent="true"
        android:background="@drawable/border"/>

    <EditText
        android:id="@+id/pass_edit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/pass_hint"
        android:layout_above="@id/log_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/colorPrimary"/>

    <EditText
        android:id="@+id/user_edit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/user_hint"
        android:layout_above="@id/pass_edit"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/colorPrimary"/>


</RelativeLayout>