<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Frontend.PostLoginActivity"
    tools:showIn="@layout/activity_post_login">

    <TextView
        android:id="@+id/user_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Logged in as:"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"/>


    <TextView
        android:id="@+id/modify_tour_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tour List"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@id/user_textview"
        android:layout_marginTop="40dp"
        android:padding="10dp"
        android:layout_centerHorizontal="true"/>

    <ScrollView
        android:id="@+id/modify_tour_scroll"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_below="@id/modify_tour_textview"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border">

        <LinearLayout
            android:id="@+id/modify_tourlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/buttons_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">


        <Button
            android:id="@+id/add_room_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Room"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:padding="40dp"
            android:onClick="onClickAddRoom"
            android:background="@drawable/border"
            android:nestedScrollingEnabled="false" />

    </LinearLayout>

</RelativeLayout>
