...
            android:textSize="@dimen/text_enter_code"
            android:layout_above="@id/code_edit"
            android:layout_marginBottom="16dp"
            android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/sign_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@android:color/tab_indicator_text"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
...
