...
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true">

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/AddLocationName"
            android:hint="Name your new room"
            android:backgroundTint="@color/colorPrimary"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="30dp"
            />

...
                android:background="@android:color/transparent"
                android:padding="7dp"
                android:elevation="5dp"
                android:translationZ="5dp" />

            <Button
                android:id="@+id/retrieve_location_button"
                android:text="Add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/border" />
        </LinearLayout>
...
